--- a/03.02-206-challenge-solution/css/main.css
+++ b/03.02-206-challenge-solution/css/main.css
@@ -34,15 +34,15 @@ header {
 }
 
 #column-1 {
-  background: #72cf99;
+  background: #d5d5d5;
 }
 
-#column-2 {
-  background: #1c8920d6;
+#column-2{
+  background: #c4c4c4;
 }
 
-#column-3 {
-  background: #60f007ac;
+#column-3{
+  background: #b7b7b7;
 }
 
 
@@ -56,30 +56,30 @@ footer {
 
 
 /*---------- TABLET ----------*/
-/* Change the background colors below */
+/* Change the colors below */
 
-@media (min-width: 768px) { 
+@media (min-width: 768px) {
   header {
-    background-color:#101d11ae ;
+    background-color: #666;
   }
 
   #column-1 {
-    background-color:#c37dc8a2 ;
+    background-color: #e3e3e3;
   }
-
+/* original column-2 color is #CCC changed it to red to see it better in the example */
   #column-2 {
-    background-color:#c31dacec ;
+    background-color: #a92d2d;
   }
 
   #column-3 {
-    background-color:#cb21c0cb ;
+    background-color: #999;
     width: 100%;
   }
 
   footer {
-    background-color:#101d11ae ;
+    background-color: #666;
   }
-  
+
   .col-3 {
     width: 50%;
   }
@@ -89,27 +89,27 @@ footer {
 /*---------- Desktops ----------*/
 @media (min-width: 1200px) {
   header {
-    background-color:#ddf0dfdd ;
+    background-color: #000;
   }
 
   #column-1 {
-    background-color:#6ef0dcdc ;
+    background-color: #999;
   }
 
   #column-2 {
-    background-color: #103df1ae; 
+    background-color: #666;
   }
 
   #column-3 {
-    background-color:#0cd5f4b6;
-    width: 33.33%;
+    background-color: #333;
+    width: 33.3%;
   }
 
   footer {
-    background-color:#ddf0dfdd ;
+    background-color: #000;
   }
-   
+
   .col-3 {
-    width: 33.33%;
+    width: 33.3%;
   }
 }
